// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompts snapshots should render Prompts 1`] = `
<DocumentFragment>
  <div
    class="css-9ljzna Prompts Prompts--bottom"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
</DocumentFragment>
`;

exports[`Prompts snapshots should render with another variant 1`] = `
<DocumentFragment>
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
  <div
    class="css-9ljzna Prompts"
    data-test-box=""
  />
</DocumentFragment>
`;
